--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "𝐓𝐞𝐱𝐭 𝐋𝐞𝐞𝐜𝐡",
     "description": "𝑻𝒆𝒙𝒕 𝑳𝒆𝒆𝒄𝒉 𝑽𝒊𝒅𝒆𝒐 𝑬𝒙𝒕𝒓𝒂𝒄𝒕𝒐𝒓 𝑭𝒐𝒓 𝑻𝒆𝒍𝒆𝒈𝒓𝒂𝒎",
-    "logo": "https://telegra.ph/file/32f106d692ff33700c464.jpg",
+    "logo": "https://graph.org/file/eb18b59310300916efdd0.jpg",
     "keywords": [
         "text-video",
         "video-extract",
